[package]
name = "qname"
version = "0.1.0"
description = "Type for qualified names in XML"
repository = "https://github.com/bbqsrc/qname"
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
qname-macro = { version = "=0.1.0", path = "macro" }
qname-impl = { version = "=0.1.0", path = "impl" }

[workspace]
members = [".", "impl", "macro"]
default-members = [".", "impl"]

