[package]
name = "qname-macro"
version = "0.1.0"
description = "Type for qualified names in XML - macro"
repository = "https://github.com/bbqsrc/qname"
license = "Apache-2.0 OR MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
qname-impl = { version = "=0.1.0", path = "../impl" }
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
